# Ankh

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run-tests.ps1  test.ps1
_codeql_build_dir/: CMakeCache.txt  Makefile  compile_commands.json
_codeql_build_dir/libs/glfw/: Makefile
_codeql_build_dir/libs/glfw/src/: Makefile
_codeql_build_dir/libs/glm/: Makefile
_codeql_build_dir/libs/glm/glm/: Makefile
_codeql_build_dir/libs/json/: Makefile
_codeql_build_dir/libs/stb/: Makefile
_codeql_build_dir/libs/tinygltf/: Makefile
_codeql_build_dir/libs/vma/: Makefile
_codeql_build_dir/src/: Ankh  Makefile
_codeql_build_dir/src/app/: Makefile
_codeql_build_dir/src/commands/: Makefile
_codeql_build_dir/src/core/: Makefile
_codeql_build_dir/src/descriptors/: Makefile
_codeql_build_dir/src/frame/: Makefile
_codeql_build_dir/src/memory/: Makefile
_codeql_build_dir/src/pipeline/: Makefile
_codeql_build_dir/src/platform/: Makefile
_codeql_build_dir/src/renderer/: Makefile
_codeql_build_dir/src/renderpass/: Makefile
_codeql_build_dir/src/scene/: Makefile
_codeql_build_dir/src/shaders/: Makefile  vert.vert
_codeql_build_dir/src/swapchain/: Makefile
_codeql_build_dir/src/sync/: Makefile
_codeql_build_dir/src/utils/: Makefile
_codeql_build_dir/tests/: Makefile  integration_test
libs/glfw/CMake/: GenerateMappings.cmake
libs/json/: CMakeLists.txt
libs/stb/: CMakeLists.txt  stb_image.h
libs/tinygltf/: CMakeLists.txt
libs/tinygltf/src/: tiny-gltf.cpp
libs/vma/: CMakeLists.txt
libs/vma/src/: vk-mem-alloc.cpp
shaders/: compile.cmake  compile.ps1  frag.frag  vert.vert
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
src/commands/: CMakeLists.txt  command-buffer.cpp  command-buffer.hpp  command-pool.cpp  command-pool.hpp
src/core/: CMakeLists.txt  context.cpp  context.hpp  debug-messenger.cpp  debug-messenger.hpp  device.cpp  device.hpp  instance.cpp  instance.hpp  physical-device.cpp  physical-device.hpp
src/descriptors/: CMakeLists.txt  descriptor-pool.cpp  descriptor-pool.hpp  descriptor-set-layout.cpp  descriptor-set-layout.hpp  descriptor-writer.cpp  descriptor-writer.hpp
src/frame/: CMakeLists.txt  README.md  frame-allocator-tests.cpp  frame-allocator.cpp  frame-allocator.hpp  frame-context.cpp  frame-context.hpp
src/memory/: CMakeLists.txt  allocator.cpp  allocator.hpp  buffer.cpp  buffer.hpp  image.cpp  image.hpp  texture.cpp  texture.hpp  upload-context.cpp  upload-context.hpp
src/pipeline/: CMakeLists.txt  graphics-pipeline.cpp  graphics-pipeline.hpp  pipeline-layout.cpp  pipeline-layout.hpp
src/platform/: CmakeLists.txt  surface.cpp  surface.hpp  window.cpp  window.hpp
src/renderer/: CMakeLists.txt  draw-pass.cpp  draw-pass.hpp  gpu-mesh-pool.cpp  gpu-mesh-pool.hpp  mesh-draw-info.hpp  renderer.cpp  renderer.hpp  scene-renderer.cpp  scene-renderer.hpp  ui-pass.cpp  ui-pass.hpp
src/renderpass/: CMakeLists.txt  frame-buffer.cpp  frame-buffer.hpp  render-pass.cpp  render-pass.hpp
src/scene/: CMakeLists.txt  camera.cpp  camera.hpp  material-pool.hpp  material.cpp  material.hpp  mesh-pool.hpp  mesh.cpp  mesh.hpp  model-loader.cpp  model-loader.hpp  model.hpp  renderable.hpp
src/shaders/: CMakeLists.txt  shader-module.cpp  shader-module.hpp
src/streaming/: CMakeLists.txt  async-uploader.cpp  async-uploader.hpp
src/swapchain/: CMakeLists.txt  swapchain.cpp  swapchain.hpp
src/sync/: CMakeLists.txt  frame-ring.hpp  frame-sync.cpp  frame-sync.hpp  gpu-serial.hpp  sync-primitives.cpp  sync-primitives.hpp
src/utils/: CMakeLists.txt  config.cpp  config.hpp  deferred-deletion-queue.hpp  file-io.cpp  file-io.hpp  gpu-resource-tracker.cpp  gpu-resource-tracker.hpp  gpu-retirement-queue.cpp  gpu-retirement-queue.hpp  gpu-signal.hpp  gpu-tracking.hpp  loggin.cpp  logging.cpp  logging.hpp  retire.hpp  tiny-gltf-impl.cpp  types.cpp  types.hpp
tests/: CMakeLists.txt  README.md  conftest.py  integration_test.cpp  run_tests.bat  run_tests.py  test_integration.py
